src/css/style.css
/* General Styles Start */
@import url("https://fonts.googleapis.com/css2?family=Exo:wght@200&family=Lobster&family=Montserrat:wght@200;400&family=Poppins:wght@100&family=Roboto:wght@100;300;400&display=swap");

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	overflow: hidden;
	font-family: "Roboto", serif;
}

.show {
	height: 100vh;
	visibility: visible;
	opacity: 1;
	transition: opacity ease-in 0.5s;
}

.hide {
	height: 0;
	visibility: hidden;
	opacity: 0;
	transition: opacity ease-out 0.5s;
}

.row {
	display: flex;
	justify-content: center;
	align-items: center;
	/* flex-basis: 50%; */
}
/* General Styles End */

/* Alert Styling Start */
.alert-container {
	position: fixed;
	height: 100vh;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.274);
	z-index: 10;
}

.text-container {
	position: relative;
	left: 50%;
	background-color: rgb(143, 68, 68);
	height: 4em;
	width: 40%;
	border-radius: 4px;
	transform: translate(-50%, 0);
}

.alert-text {
	position: absolute;
	left: 50%;
	line-height: 4em;
}
.alert-close {
	position: absolute;
	width: fit-content;
	right: 0;
	margin: 0.2em 0.2em 0 0;
	padding: 0.3em 0.62em;
	border-radius: 50%;
	font-weight: bold;
	background-color: rgb(180, 80, 80);
	color: #fff;
	cursor: pointer;
}

.alert-close:hover {
	background-color: rgb(252, 252, 252);
	color: #000;
}

/* Alert Styling End */

/* Landingpage Styles Start */

.home-img {
	width: 50%;
	height: 100vh;
}

.home-img img {
	width: 90%;
	margin-top: 20%;
}

.home-text {
	height: 100vh;
	padding: 10% 10% 0;
	width: 50%;
	background-color: cadetblue;
}

.home-text h1 {
	font-size: 2.5em;
	margin: 1em 0;
}

.home-text p {
	margin: 1.5em 0;
	font-size: 1.4em;
}

.btn {
	padding: 1em 1.5em;
	border: none;
	border-radius: 4px;
	cursor: pointer;
	box-shadow: 0 4px 5px -2px #000;
}
/* Landingpage Styles End */

/* Akan Form Styles Start */
.akan {
	background-color: rgb(47, 141, 141);
}

.akan-content {
	position: absolute;
	padding: 2.5em;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	box-shadow: 0 0 3px rgb(255, 255, 255);
	background-color: rgba(29, 187, 187, 0.288);
}

.akan-form .form-group {
	margin: 1em 0 0;
}

.akan-form input {
	margin: 0.7em 0;
	padding: 0.7em;
}
.akan-form label {
	font-size: 1.2em;
}

.overlay-content {
	position: fixed;
	background-color: rgba(0, 0, 0, 0.856);
	height: 100vh;
	width: 100%;
	overflow: hidden;
}

.akan-overlay .overlay-text {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: aquamarine;
	padding: 2.5em;
	box-shadow: 0 1px 2px #fff;
}

.overlay-text > * {
	margin: 1em 1em 2em;
	text-align: center;
}
/* Akan Form Styles End */

